More refactoring of REST stuff; change for Java 8